# arkive

./: .gitignore  README.md  pyproject.toml  setup.py
arkive/: __init__.py  archive.py  audio_read.py  definitions.py  interface.py  utils.py
